--- a/index.html
+++ b/index.html
@@ -8,7 +8,31 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 >Begin</h1>
+    <div class="main-container">
+        <div class="selection-container">
+            <div class="selection-item">
+                <div class="selection-item-image"></div>
+                <div class="selection-item-text">Option 1</div>
+            </div>
+            <div class="selection-item">
+                <div class="selection-item-image"></div>
+                <div class="selection-item-text">Option 2</div>
+            </div>
+            <div class="selection-item">
+                <div class="selection-item-image"></div>
+                <div class="selection-item-text">Option 3</div>
+            </div>
+            <div class="selection-item">
+                <div class="selection-item-image"></div>
+                <div class="selection-item-text">Option 4</div>
+            </div>
+        </div>
+        <div class="view-container">
+
+        </div>
+    </div>
+    <h1></h1>
+
     <script src="./app.js"></script>
 </body>
 </html>
