--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="selection-container">
-            <img id="view-img" src="">
-        </div>
-        <div class="view-container">
-        </div>
+        <div id="selection-container"></div>
+        <div class="view-container"></div>
     </div>
-    <h1></h1>
 
     <script type="module" src="./app.js"></script>
 </body>
