--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="main-container">
         <div id="selection-container"></div>
-        <div class="view-container"></div>
+        <div class="view-container">
+            <div id="edit-container"></div>
+        </div>
     </div>
 
     <script type="module" src="./app.js"></script>
