Completed TextArea Focus

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main-container">
         <div id="selection-container"></div>
         <div class="view-container">
-            <div id="edit-container"></div>
+            <div class="edit-container"></div>
         </div>
     </div>
 
